--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferraria Cusco - Gestão Integrada</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/bQAy1gG.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
@@ -320,3 +321,4 @@
 </script>
 </body>
 </html>
+
