--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         { id: 3, name: "Faca Comum", price: 7.80, img: "https://i.imgur.com/c7VZQFm.png", recipe: { yield: 7, materials: [{n: "Madeira Cilíndrica", q: 4}, {n: "Lingote de Aço", q: 3}] } },
         { id: 4, name: "Faca de Arremesso", price: 11.70, img: "https://i.imgur.com/tAnQ019.png", recipe: { yield: 1, materials: [{n: "Tábua de Madeira", q: 1}, {n: "Lingote de Aço", q: 1}, {n: "Verniz", q: 1}] } },
         { id: 5, name: "Lingote de Aço", price: 3.67, img: "https://i.imgur.com/k84v8UK.png", recipe: { yield: 3, materials: [{n: "Pepita de Prata", q: 4}, {n: "Pepita de Cobre", q: 5}, {n: "Carvão Vegetal", q: 5}] } },
-        { id: 6, name: "Lingote de Cobre", price: 3.35, img: "https://i.imgur.com/3e9Rtrv.png", recipe: { yield: 2, materials: [{n: "Pepita de Cobre", q: 4}, {n: "Carvão", q: 6}] } },
+        { id: 6, name: "Lingote de Cobre", price: 3.35, img: "https://i.imgur.com/3e9Rtrv.png", recipe: { yield: 2, materials: [{n: "Pepita de Cobre", q: 4}, {n: "Carvão Vegetal", q: 6}] } },
         { id: 7, name: "Lingote de Ferro", price: 2.57, img: "https://i.imgur.com/FLBxUU9.png", recipe: { yield: 7, materials: [{n: "Pepita de Ferro", q: 9}, {n: "Carvão Bruto", q: 10}] } },
-        { id: 8, name: "Lingote de Ouro", price: 3.98, img: "https://i.imgur.com/W09uKgt.png", recipe: { yield: 3, materials: [{n: "Pepita de Ouro", q: 7}, {n: "Carvão", q: 5}] } },
+        { id: 8, name: "Lingote de Ouro", price: 3.98, img: "https://i.imgur.com/W09uKgt.png", recipe: { yield: 3, materials: [{n: "Pepita de Ouro", q: 7}, {n: "Carvão Vegetal", q: 5}] } },
         { id: 9, name: "Lingote de Prata", price: 3.04, img: "https://i.imgur.com/OP2T9Xk.png", recipe: { yield: 2, materials: [{n: "Pepita de Prata", q: 5}, {n: "Carvão Vegetal", q: 1}] } },
         { id: 10, name: "Machado Avançado", price: 11.70, img: "https://i.imgur.com/4O83Srs.png", recipe: { yield: 1, materials: [{n: "Tábua de Madeira", q: 1}, {n: "Pepita de Prata", q: 1}, {n: "Verniz", q: 1}] } },
         { id: 11, name: "Moedor", price: 0.59, img: "https://i.imgur.com/hJnt1RN.png", recipe: { yield: 10, materials: [{n: "Madeira Cilíndrica", q: 1}, {n: "Pepita de Prata", q: 1}, {n: "Verniz", q: 1}, {n: "Carvão Vegetal", q: 1}] } },
@@ -419,3 +419,4 @@
 </script>
 </body>
 </html>
+
